--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "prebuild": "next telemetry disable"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.501.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.501.0",
-    "@heroicons/react": "^2.1.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "postcss": "^8.4.45",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
-    "eslint-config-next": "^15.3.4"
+    "eslint-config-next": "^15.3.4",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.6.3"
   }
 }
