--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.0.0",
+    "lucide": "^0.548.0",
     "lucide-react": "^0.501.0",
     "next": "^14.2.0",
-    "react": "^18.3.0",
+    "react": "^18.3.1",
     "react-dom": "^18.3.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1"
